--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
 $primary-color: #1e555c;
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Orbitron:400,500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
 @font-face {
   font-family: "Digital";
   src: url("assets/digital-7.regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Righteous";
+  src: url("assets/Righteous-Regular.ttf") format("truetype");
 }
 
 * {
@@ -25,10 +27,13 @@ html {
 
 body {
   background-color: $primary-color;
-  //   font-family: "Montserrat", sans-serif;
   font-family: "Righteous", cursive;
   color: white;
   text-align: center;
+}
+
+svg {
+  font-size: 16px;
 }
 
 #root {
