--- a/src/App.scss
+++ b/src/App.scss
@@ -218,3 +218,11 @@ button {
     margin-top: 0.2rem;
   }
 }
+
+.fade-in {
+  opacity: 0;
+}
+.fade-in.visible {
+  transition: opacity 1s ease-in;
+  opacity: 1;
+}
