Genel yapılarda değişiklik yapıldı.

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -4,3 +4,13 @@
 /* ControlList */
 @import "./controls/controlList";
 @import "./controls/controlItem";
+
+/* Timer */
+@import "./timer/timer";
+@import "./timer/timerControl";
+
+/* Author */
+@import "./author/author";
+
+/* Fade Animation */
+@import "./animation/fade";
