--- a/src/scss/components/_controlButton.scss
+++ b/src/scss/components/_controlButton.scss
@@ -10,4 +10,11 @@
   @media screen and (max-width: 600px) {
     margin: 0.6rem 1rem;
   }
+
+  &.-timerControl {
+    margin: 0 0.4rem;
+    @media screen and (max-width: 600px) {
+      margin: 0 0.6rem;
+    }
+  }
 }
